# cpp-ncurses-wrapper

./: CMakeLists.txt  README.md
include/ncurses/: nc.hpp
src/: nc.cpp
tools/: install_required_packages.sh
